# BOBKit

./: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  get_dependencies  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
cpp/include/buccaneer/: buccaneer-NN-build-cyc.h  buccaneer-NN-build.h  buccaneer-prot.h  k2c_activations.h  k2c_core_layers.h  k2c_helper_functions.h  k2c_include.h  k2c_recurrent_layers.h  k2c_tensor_include.h
cpp/src/: buccaneer-NN-build-cyc.cpp  buccaneer-NN-build.cpp  buccaneer-NN-model.cpp  buccaneer-prot.cpp  buccaneer-util.cpp  cbuccaneerNN.cpp  k2c_activations.cpp  k2c_core_layers.cpp  k2c_helper_functions.cpp  k2c_recurrent_layers.cpp  k2c_tensor_include.cpp
cpp/test/: test_cell.cpp
dependencies/ccp4/: CMakeLists.txt
dependencies/clipper/: CMakeLists.txt  Makefile  clipper.pc  config.status  libtool
dependencies/clipper/clipper/: Makefile
dependencies/clipper/clipper/contrib/: Makefile
dependencies/clipper/clipper/core/: Makefile  clipper_types.cpp  clipper_types.h  clipper_util.h
dependencies/clipper/cmake/: source.cmake
dependencies/clipper/examples/: Makefile
dependencies/gemmi/: CMakeLists.txt
dependencies/mmdb2/: CMakeLists.txt
docs/Doxygen/: Doxyfile-bobkit.cfg
docs/Sphinx/: Makefile
docs/Sphinx/source/: buccaneer-help.txt  buccaneer_pyapi.rst  buccaneer_util.rst  clipper_pyapi.rst  conf.py  correct.rst  filter.rst  find.rst  grow.rst  index.rst  install.rst  join.rst  link.rst  ncsbuild.rst  prep.rst  proteindb_pyapi.rst  prune.rst  py_api_reference.rst  pybuccaneer.rst  rebuild.rst  requirements.txt  sequence.rst  util_pyapi.rst  utils.rst
include/buccaneer/: buccaneer-build.cpp  buccaneer-build.h  buccaneer-correct.h  buccaneer-find.cpp  buccaneer-find.h  buccaneer-grow.cpp  buccaneer-grow.h  buccaneer-known.cpp  buccaneer-known.h  buccaneer-link.h  buccaneer-prep.cpp  buccaneer-prep.h  buccaneer-prot.cpp  buccaneer-prot.h  buccaneer-sequence.cpp  buccaneer-sequence.h  buccaneer-util.cpp  buccaneer-util.h  cbuccaneer.cpp  csequins.cpp  protein_db.cpp  protein_db.h  simulate-lib.h
python/: .clang-format  arrays.h  b_build.cpp  b_correct.cpp  b_filter.cpp  b_find.cpp  b_grow.cpp  b_join.cpp  b_known.cpp  b_lib.cpp  b_link.cpp  b_merge.cpp  b_ncsbuild.cpp  b_prep.cpp  b_prot.cpp  b_protein_db.cpp  b_protein_loop.cpp  b_prune.cpp  b_sequence.cpp  b_simplex.cpp  b_simulate.cpp  b_tidy.cpp  b_util.cpp  bobkit.cpp  bobkit_utils.cpp  buildkit-cell.cpp  buildkit-join.cpp  buildkit-join.h  buildkit-minimol.cpp  buildkit-minimol.h  buildkit.cpp  buildkit_buccaneer_lib.cpp  buildkit_build.cpp  buildkit_cell.cpp  buildkit_clipper_types.cpp  buildkit_coord.cpp  buildkit_correct.cpp  buildkit_filter.cpp  buildkit_find.cpp  buildkit_grow.cpp  (+63 more)
python/bobkit/: __init__.py  _buccaneer.py  _ca_sequence_ml.py  _util.py  buccaneer.py  util.py
python/bobkit/_scripts/: buccaneer.py  logger.py  prepare_kaggle_dataset.py  set_parameters.py
python/bobkit/buccaneer/: __init__.py
python/bobkit/clipper/: __init__.py
python/bobkit/protein_db/: __init__.py
python/bobkit/util/: __init__.py  _process_ml_outputs.py
scripts/: buccaneer.py  set_parameters.py
test_data/: 7ins.mtz  build1_find.cif  build1_find_grow.mmcif  contrib_test_data.py  emd_3488_cropped.mtz  fasta_89_109.seq
tests/: clipper_test_core.py  test_buccaneer.py  test_buccaneer_steps.py  test_cell.py  test_clipper.py  test_clipper_contrib.py  test_clipper_core_arch.py  test_coord.py  test_hkldata.py  test_minimol.py  test_nxmap.py  test_read_structure.py  test_serial.py  test_xmap.py
